--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Yu's Notes Archive"
 title_separator          : "-"
 name                     : &name "Yu"
 description              : &description "personal description"
-url                      : https://github.com/Phiyu # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://yu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Phiyu/yu.github.io"
 
@@ -25,8 +25,8 @@ author:
   name             : "Yu"
   pronouns         : 
   bio              : "Metaphysics, or quit physics."
-  location         : "Earth"
-  employer         : "USTC"
+  location         : "Hefei, Anhui, China"
+  employer         : "University of Science and Technology of China"
   uri              : # URL
   email            : "yuhongfei@mail.ustc.edu.cn" 
 
