--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ title                    : "Yu's Notes Archive"
 title_separator          : "-"
 name                     : &name "Yu"
 description              : &description "personal description"
-url                      : https://yu.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://phiyu.github.io/yu.github.io/ # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
 repository               : "Phiyu/yu.github.io"
 
