--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -14,7 +14,7 @@ main:
   - title: "考前复习"
     url: /tm/    
     
-  - title: "试卷"
+  - title: "课程试卷"
     url: /testpaper/
         
   - title: "大雾资料"
